	* gm2/mc-boot/Gkeyc.c:  regenerated.
	* gm2/mc-boot/Gkeyc.h:  regenerated.
	* gm2/mc/decl.mod:  LENGTH implemented.  isAProcType
          new procedure function.  requiresUnpackProc (New
          procedure).  doAssignment use requiresUnpackProc.
	* gm2/mc/keyc.def:  useM2RTS, useStrlen, useCtype
          defined.
	* gm2/mc/keyc.mod:  useM2RTS, useStrlen, useCtype
	  implemented.

2017-01-16      Gaius Mulley <gaius@gnu.org>

	* gm2/mc/decl.mod:  add shortcomplex, longcomplex
          to the list of base datatypes in mc.

2017-01-15      Gaius Mulley <gaius@gnu.org>

	* gm2/mc-boot-ch/Glibc.c:  process the \\n
          escapes before using vfprintf.  libc_getpid
          (New function).  libc_sleep (New function).
	* gm2/mc/decl.mod:  (doEscapeC) avoid escaping \\.

2017-01-12      Gaius Mulley <gaius@gnu.org>

	* gm2/mc-boot/Gdecl.c:  New file.
	* gm2/mc-boot/GmcComment.c:  New file.
	* gm2/mc-boot/GmcComment.h:  New file.
	* gm2/mc/mcComment.def:  New file.
	* gm2/mc/mcComment.mod:  New file.

2017-01-11      Gaius Mulley <gaius@gnu.org>

	* gm2/mc/decl.mod:  add a def to the done list.
	* gm2/mc-boot/Gdecl.c:  regenerated.
	* gm2/mc/decl.mod:  handle type COMPLEX and RE, IM.
          Tidy up formatting of h files.  Implement setvalue.
	  Fix proctype using an unbounded array parameter.
	* gm2/mc/keyc.def:  (useComplex) New procedure.
	* gm2/mc/keyc.mod:  detect type complex and complex related
	  intrinsics.
	* gm2/bnf/mc-4.bnf:  fix bug when created a typed const.
	* gm2/mc-boot-ch/Glibc.c:  regenerated.
	* gm2/mc-boot/GASCII.h:  regenerated.
	* gm2/mc-boot/GArgs.h:  regenerated.
	* gm2/mc-boot/GAssertion.h:  regenerated.
	* gm2/mc-boot/GBreak.h:  regenerated.
	* gm2/mc-boot/GCOROUTINES.h:  regenerated.
	* gm2/mc-boot/GCmdArgs.h:  regenerated.
	* gm2/mc-boot/GDebug.h:  regenerated.
	* gm2/mc-boot/GDynamicStrings.h:  regenerated.
	* gm2/mc-boot/GEnvironment.h:  regenerated.
	* gm2/mc-boot/GFIO.h:  regenerated.