@@ -14,6 +14,8 @@
           defined.
 	* gm2/mc/keyc.mod:  useM2RTS, useStrlen, useCtype
 	  implemented.
+	* gm2/mc/decl.mod:  doLengthC (New procedure).
+	  length is placed in the base symbol scope.
 
 2017-01-16      Gaius Mulley <gaius@gnu.org>
 
